--- a/app.css
+++ b/app.css
@@ -9,17 +9,17 @@ body{
   background-color: #F0EFF4;
   margin-right: 10%;
   border-bottom-right-radius: 40px;
-  margin-bottom: 4%;
+  margin-bottom: 6%;
 }
 img{
-  width: 8%;
+  width: 7.2%;
   padding-left: 1%;
   transition: 0.3s;
   float: left;
 }
 img:hover{
   cursor: pointer;
-  width: 8.5%;
+  width: 7.5%;
 }
 button{
   padding: 1%;
@@ -49,4 +49,7 @@ button:hover{
 }
 .bodyDiv{
   padding: 10px;
+}
+table{
+  margin: 0 auto;
 }
