--- a/app.css
+++ b/app.css
@@ -11,6 +11,13 @@ body{
   border-bottom-right-radius: 40px;
   margin-bottom: 6%;
 }
+a{
+  color: white;
+  text-decoration: none;
+}
+a:hover{
+  text-decoration: underline;
+}
 img{
   width: 7.2%;
   padding-left: 1%;
