--- a/app.css
+++ b/app.css
@@ -9,22 +9,28 @@ body{
   background-color: #F0EFF4;
   margin-right: 10%;
   border-bottom-right-radius: 40px;
-  margin-bottom: 6%;
+  margin-bottom: 8%;
 }
 a{
-  color: white;
+  color: #003554;
   text-decoration: none;
 }
 a:hover{
   text-decoration: underline;
 }
-img{
+iframe{
+  border: 4px solid  #F0EFF4;
+  border-radius: 3px;
+  margin: 14px auto;
+  margin-bottom: 5%;
+}
+#ttlIMG{
   width: 7.2%;
   padding-left: 1%;
   transition: 0.3s;
   float: left;
 }
-img:hover{
+#ttlIMG:hover{
   cursor: pointer;
   width: 7.5%;
 }
