--- a/app.css
+++ b/app.css
@@ -1,3 +1,6 @@
+html{
+  scroll-behavior: smooth;
+}
 body{
     font-family: 'Josefin Sans', sans-serif;
     color: #F0EFF4;
@@ -32,7 +35,7 @@ iframe{
 }
 #ttlIMG:hover{
   cursor: pointer;
-  width: 7.5%;
+  margin-left: 0.4%;
 }
 button{
   padding: 1%;
@@ -65,4 +68,5 @@ button:hover{
 }
 table{
   margin: 0 auto;
+  margin-bottom: 3%;
 }
