--- a/app.css
+++ b/app.css
@@ -1,6 +1,19 @@
 html{
   scroll-behavior: smooth;
 }
+::-webkit-scrollbar {
+  width: 0.5%;
+}
+::-webkit-scrollbar-track{
+  background-color: #002E49;
+}
+::-webkit-scrollbar-thumb{
+  background-color: white;
+  border-radius: 3px;
+}
+::-webkit-scrollbar-thumb:hover{
+  background-color: #DFDFDF;
+}
 body{
     font-family: 'Josefin Sans', sans-serif;
     color: #F0EFF4;
