--- a/app.css
+++ b/app.css
@@ -2,7 +2,7 @@ html{
   scroll-behavior: smooth;
 }
 ::-webkit-scrollbar {
-  width: 0.5%;
+  width: 10px;
 }
 ::-webkit-scrollbar-track{
   background-color: #002E49;
